assets/css/style.css
/* Create a y-scroll bar */
html {
    overflow-y: scroll;
 }

/* Background with image from Subtle Pattern */
body {
    background-image: url("../images/upfeathers.png");
    margin: 0;
    padding: 0;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 18px;
    line-height: 150%;
     
}

/* Create a nav bar which always stay fixed at the top of the page */
.header {
    color: #ffffff;
    background-color: #ffffff;
    margin: 0;
    text-align: center;
    height: 70px;
    width: 100%;
    border: solid #cccccc;
    border-width: 1px;
    z-index: 100;
    overflow: hidden;
    position: fixed;
    top: 0;   
}

/* Create a container with my name */
.myname { 
    font-family: Georgia, 'Times New Roman', Times, serif;    
    font-size: 30px;
    font-weight: bold;
    background-color: #4aaaa5;
    display: inline-block;
    text-align: center;
    line-height: 70px;
    position: relative;
    right: 251px;
    padding: 0 40px;
}

/* Create component of the nav bar */
.about, .portfolio, .contact {
    display: inline-block;
    text-align: center;
    line-height: 50px;
    left: 255px;
    position: relative;
    color: #777777;
    padding: 5px;
    font-family: Arial, Helvetica, sans-serif;
}

/* Create "About Me" section */
h2 {
    font-family: Georgia, 'Times New Roman', Times, serif;    
    font-size: 30px;
    font-weight: bold;
    padding-bottom: 30px;
    color: #4aaaa5;   
} 

/* Create horizontal ruler */
hr {
    color: #dddddd;
}

/* Create a container for the main content in the About Me and Contact pages */
.main_content_container {
    padding: 39px;
    width: 880px;
    border-width: 1px;
    border: solid #dddddd;
    margin: 90px auto;
    height: auto;
    background-color: rosybrown;
    font-family: Arial, Helvetica, sans-serif;
    z-index: -1;
}

/* Format the profile picture */

#bio-image {
    float: left;
    width: 200px;
    height: 230px;
    padding-right: 40px;
}

/* Format the introductory paragraph */
p {
    width: 100%;
    padding-top: 30px;
    color: #777777;
    font-family: Arial, Helvetica, sans-serif;
}


/* Style inputs with type="text", select elements and textareas */
input[type=text], select, textarea {
    width: 100%; /* Full width */
    padding: 12px; /* Some padding */  
    border: 1px solid #cccccc; /* Gray border */
    border-radius: 4px; /* Rounded borders */
    box-sizing: border-box; /* Make sure that padding and width stays in place */
    margin-top: 6px; /* Add a top margin */
    margin-bottom: 16px; /* Bottom margin */
    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
}

/* Style the submit button with a specific background color etc */
input[type=submit] {
    background-color: #4aaaa5;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

/* When moving the mouse over the submit button, add a darker green color */
input[type=submit]:hover {
    background-color: #45a049;
}

/* Add a background color and some padding around the form */
.container {
    color: #777777;
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 20px;
}


/* Create a container for the main content in the Porfolio page*/
.main_content_container.portfolio_content {
    height: 900px;
}

/* Create frame for the pictures */
div.gallery {
    margin: 50px;
    border: 1px solid #ccc;
    float: left;
    width: 220px;
    background-color: #4aaaa5;
}

/* Create hover effect when hovering over pictures */
div.gallery:hover {
    border: 1px solid #777;
}

/* Format and resize images */
div.gallery img {
    position: relative;
    float: left;
    width:  220px;
    height: 130px;
    background-repeat:   no-repeat;
    background-size:     cover;
}

/* Description for each picture */
div.description {
    padding: 15px;
    text-align: center;
    color: #ffffff;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

/* Make sure paragraph stay clear and in place */
.clearfix::after {
    content: "";
    clear: both;
}

/* Create the upper part of the footer */
.upperfooter {
    color: black;
    background-color: #4aaaa5;
    margin: 0;
    text-align: center;
    height: 60px;
    position: fixed;
    bottom: 0;
    width: 100%;
}

/* Create footer text "Copyright" */
.footer_text {
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
}

/* Create footer */
.footer {
    color: #ffffff;
    background-color: #666666;
    margin: 0;
    text-align: center;
    height: 50px;
    position: fixed;
    bottom: 0;
    width: 100%;
    z-index: 100;
}
  
    

